--- a/курсач3/курсач3.csproj
+++ b/курсач3/курсач3.csproj
@@ -88,10 +88,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppState.cs" />
     <Compile Include="ChartForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Panel.cs" />
     <Compile Include="Form2.cs">
       <SubType>Form</SubType>
     </Compile>
