добавлен график в сохраненные планы. отредактировано поле срока достижения цели в сохраненных планах

--- a/курсач3/курсач3.csproj
+++ b/курсач3/курсач3.csproj
@@ -88,9 +88,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChartForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="MyChart.cs" />
     <Compile Include="Panel.cs" />
     <Compile Include="Form2.cs">
       <SubType>Form</SubType>
