--- a/курсач3/курсач3.csproj
+++ b/курсач3/курсач3.csproj
@@ -88,6 +88,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Point.cs" />
     <Compile Include="MyChart.cs" />
     <Compile Include="Panel.cs" />
     <Compile Include="Form2.cs">
